# rusteron

./: .dockerignore  .gitignore  .justfile  AGENTS.md  BENCHMARKS.md  BUILD.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  lsan.supp  package-lock.json  rust-toolchain.toml  valgrind-output.txt  valgrind-uaf-out.txt  valgrind.supp
.github/workflows/: ci.yml  release.yml
docs/: mdc_mds_guide.md  media_driver_configuration_and_backpressure_guide.md  multi-threaded-arc-prd.md
docs/upstream/: aeron-archive-error-code-c-api.md
rusteron-archive/: Cargo.toml  README.md  bindings.h  build.rs  build_common.rs
rusteron-archive/docs-rs/: aeron.rs  aeron_custom.rs  bindings.rs
rusteron-archive/examples/: archive_error_handling.rs  persistent_subscription.rs  persistent_subscription_failover.rs  record_and_replay.rs  recording_replication.rs  recording_throughput.rs  replay_merge.rs
rusteron-archive/src/: lib.rs  persistent_subscription_integration.rs  persistent_subscription_tests.rs  slow_consumer_test.rs  testing.rs
rusteron-client/: Cargo.toml  README.md  bindings.h  build.rs  build_common.rs
rusteron-client/benches/: offer_claim_poll.rs  ping_pong.rs  ping_pong_ipc.rs
rusteron-client/docs-rs/: aeron.rs  aeron_custom.rs
rusteron-client/examples/: basic_pub_sub.rs  basic_publisher.rs  basic_subscriber.rs  driver_stats.rs  embedded_exclusive_ipc_throughput.rs  embedded_ping_pong.rs  file_transfer.rs  multi_destination_subscription.rs  non_blocking_publisher.rs  pf-macos-mdc-loss.conf  request_response.rs  streaming_rate.rs
rusteron-client/src/: lib.rs
rusteron-code-gen/: Cargo.toml  README.md  build.rs
rusteron-code-gen/bindings/: archive.rs  client.rs
rusteron-code-gen/src/: common.rs  (+8 more)
rusteron-docker-samples/: README.md
rusteron-media-driver/: Cargo.toml  README.md  bindings.h  build.rs  build_common.rs
scripts/: valgrind-run.sh
(+8 files in other folders)
