[workspace]
members = [
    "rusteron-code-gen",
    "rusteron-media-driver",
    "rusteron-client",
    "rusteron-archive",
]
exclude = ["rusteron-docker-samples/rusteron-dummy-example"]
resolver = "2"

[workspace.package]

[workspace.dependencies]
bindgen         = "0.72"
cmake           = "0.1"
criterion       = "0.8"
ctrlc           = "3.5"
dunce           = "1.0"
fd-lock         = "4.0"
flate2          = { version = "1.1" }
hdrhistogram    = "7.5"
itertools       = "0.15"
log             = "0.4"
num-format      = "0.4"
pkg-config      = "0.3"
proc-macro2     = "1.0"
proptest        = "1.11"
quote           = "1.0"
regex           = "1.12"
reqwest         = { version = "0.13", features = ["blocking"], default-features = false }
rusteron-code-gen = { path = "rusteron-code-gen", version = "=0.1.168" }
serial_test     = { version = "3.5", features = ["file_locks"] }
syn             = { version = "2.0", features = ["full"] }
tar             = "0.4"
walkdir         = "2.5"

[release]
bump                   = "auto"
update_dependencies    = true
publish                = true
workspace              = true
auto_publish           = true
push                   = true
tag                    = false
dependency_version     = "update"
consolidate_commits    = true
allow_dirty            = true
no_confirm             = true
update_crates_index    = true
verify                 = false
compression            = "best"

[profile.release]
debug = false
panic = "unwind"
# Fat LTO + single codegen unit: the generated #[inline] attributes provide
# cross-crate inlining for downstream consumers; these settings make our own
# release artifacts (benches, media_driver binary, examples) optimal.
lto = "fat"
codegen-units = 1

#[profile.bench]
#debug     = true
#opt-level = 0
